--- a/src/classes/Dml.cls
+++ b/src/classes/Dml.cls
@@ -43,7 +43,7 @@ public with sharing class Dml {
         try {
             insert accts;            
             // Update account Acme2.
-            accountToUpdate =[SELECT BillingCity FROM Account WHERE Name='Acme2' AND BillingCity='San Francisco'LIMIT 1];
+            accountToUpdate =[SELECT BillingCity FROM Account WHERE Name='Acme2' AND BillingCity='San Francisco'LIMIT 5];
             // Update the billing city.
             accountToUpdate.BillingCity = 'New York';
             // Make the update call.
@@ -52,8 +52,7 @@ public with sharing class Dml {
             System.debug('An unexpected error has occurred: ' + e.getMessage());
         }   
         // Verify that the billing city was updated to New York.
-        Account afterUpdate = 
-            [SELECT BillingCity FROM Account WHERE Id=:accountToUpdate.Id];
+        Account afterUpdate =[SELECT BillingCity FROM Account WHERE Id=:accountToUpdate.Id];
         System.assertEquals('New York', afterUpdate.BillingCity);  
     }
     //Creating Parent and Child Records in a Single Statement Using Foreign Keys
