--- a/src/classes/Dml.cls
+++ b/src/classes/Dml.cls
@@ -59,28 +59,21 @@ public with sharing class Dml {
     public void ParentAndChildRecords(){
         Date dt = Date.today();
         dt = dt.addDays(7);
-        Opportunity newOpportunity = new Opportunity(
-            Name='OpportunityWithAccountInsert',
-            StageName='Prospecting',
-            CloseDate=dt);
-        
+        Opportunity newOpportunity = new Opportunity(Name='OpportunityWithAccountInsert',StageName='Prospecting',CloseDate=dt);
+
         // Create the parent reference.
         // Used only for foreign key reference
         // and doesn't contain any other fields.
-        Account accountReference = new Account(
-            MyExtID__c='SAP111111');                
+        Account accountReference = new Account(MyExtID__c='SAP111111');                
         newOpportunity.Account = accountReference;
         
         // Create the Account object to insert.
         // Same as above but has Name field.
         // Used for the insert.
-        Account parentAccount = new Account(
-            Name='Hallie',
-            MyExtID__c='SAP111111');      
+        Account parentAccount = new Account(Name='Hallie',MyExtID__c='SAP111111');      
         
         // Create the account and the opportunity.
-        Database.SaveResult[] results = Database.insert(new SObject[] {
-            parentAccount, newOpportunity });
+        Database.SaveResult[] results = Database.insert(new SObject[] {parentAccount, newOpportunity });
         
         // Check results.
         for (Integer i = 0; i < results.size(); i++) {
