--- a/src/classes/Dml.cls
+++ b/src/classes/Dml.cls
@@ -78,13 +78,10 @@ public with sharing class Dml {
         // Check results.
         for (Integer i = 0; i < results.size(); i++) {
             if (results[i].isSuccess()) {
-            System.debug('Successfully created ID: '
-                  + results[i].getId());
+            System.debug('Successfully created ID: ' + results[i].getId());
             } else {
-            System.debug('Error: could not create sobject '
-                  + 'for array element ' + i + '.');
-            System.debug('   The error reported was: '
-                  + results[i].getErrors()[0].getMessage() + '\n');
+            System.debug('Error: could not create sobject ' + 'for array element ' + i + '.');
+            System.debug('The error reported was: ' + results[i].getErrors()[0].getMessage() + '\n');
             }
         }
     }
