--- a/src/classes/AccountTriggerHandler.cls
+++ b/src/classes/AccountTriggerHandler.cls
@@ -2,7 +2,7 @@ public with sharing class AccountTriggerHandler {
     public static void addAccountType(List<Account> listOfAccount) {
         for(Account account: listOfAccount){
             if(account.Type=='Saving'){
-                account.AccountNumber = 'SB'+ account.AccountNumber;
+                account.AccountNumber = 'SA'+ account.AccountNumber;
             }
             if(account.Type=='Fixed Deposit'){
                 account.AccountNumber = 'FD'+ account.AccountNumber;
