--- a/src/classes/AccountTriggerHandler.cls
+++ b/src/classes/AccountTriggerHandler.cls
@@ -1,7 +1,7 @@
 public with sharing class AccountTriggerHandler {
     public static void addAccountType(List<Account> listOfAccount) {
         for(Account account: listOfAccount){
-            if(account.Type=='Saving'){
+            if(account.Type=='Savings Account'){
                 account.AccountNumber = 'SA'+ account.AccountNumber;
             }
             if(account.Type=='Fixed Deposit'){
